--- a/weddingapp/WeddingApp/Views/UserControls/ServiceSelectionUC.xaml
+++ b/weddingapp/WeddingApp/Views/UserControls/ServiceSelectionUC.xaml
@@ -151,7 +151,7 @@
                                                     FontWeight="DemiBold"
                                                     HorizontalAlignment="Center"
                                                     VerticalAlignment="Center"
-                                                    Text="{Binding COST, StringFormat=N0}"/>
+                                                    Text="{Binding SERVICECOST, StringFormat=N0}"/>
                                             </Grid>
 
                                             <!-- background -->
